--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>메뉴관리</title>
-  <link href="css/styles2.css" rel="stylesheet"/>
+  <link href="/css/styles2.css" rel="stylesheet"/>
+  <link href="/css/styles.css" rel="stylesheet" />
   <script>
   // 현재 선택된 컴포넌트
   let dv;
