--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -264,11 +264,18 @@
     </nav>
   </div>
   <div class="card-body" id="menuInput">
-      <lable id="menuNameL" style="visibility:hidden;">메뉴명 :</lable>
-      <input type="text" name="name" id="menuName" onchange="fn_update(this, 'name'); return false;" style="visibility:hidden;">
-      <br><br>
-      <lable id="menuPathL" style="visibility:hidden;">경로 :</lable>
-      <input type="text" name="path" id="menuPath" onchange="fn_update(this, 'path'); return false;" style="visibility:hidden;">
+      <table>
+        <tr>
+          <td><lable id="menuNameL" style="visibility:hidden;">메뉴명</lable></td>
+          <td></td>
+          <td><input type="text" name="name" id="menuName" onchange="fn_update(this, 'name'); return false;" style="visibility:hidden;"></td>
+        </tr>
+        <tr>
+          <td><lable id="menuPathL" style="visibility:hidden;">경로</lable></td>
+          <td></td>
+          <td><input type="text" name="path" id="menuPath" onchange="fn_update(this, 'path'); return false;" style="visibility:hidden;"></td>
+        </tr>
+      </table>
   </div>
   <form th:action="@{/menu/save}" method="post" id="menuForm">
     <table id="tempTable">
