--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -54,7 +54,10 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#!">설정</a></li>
-                        <li><a class="dropdown-item" onclick="sendData('/menu/all');">메뉴 관리</a></li>
+                        <span sec:authorize="hasRole('ROLE_ADMIN')">
+                            <li><a class="dropdown-item" onclick="sendData('/menu/all');">메뉴 관리</a></li>
+                        </span>
+
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item"  sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃</a></li>
                     </ul>
