--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -6,6 +6,7 @@
   <title>메뉴관리</title>
   <link href="/css/styles2.css" rel="stylesheet"/>
   <link href="/css/styles.css" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
   // 현재 선택된 컴포넌트
   let dv;
@@ -17,42 +18,40 @@
   let menuPathL = document.getElementById('menuPathL');
   let menuPath = document.getElementById('menuPath');
 
+  // Json 배열
+  let saveJson = new Array();
+  let saveCnt = 0;
+
   // 저장 데이터
   function saveTable(event, iRow, colStatus) {
-      let temp = document.getElementById('tempTable');
-      let row;
-      let cell;
-      let idx = document.getElementById('data_' + iRow.id);
       let id = iRow.dataset.id == null ? '' : iRow.dataset.id;;
       let path = iRow.dataset.path == null ? '' : iRow.dataset.path;
+      let findIdx = saveJson.findIndex(function(data){return data.rowId === "data_" + iRow.id});
 
       if(event == "insert") {
           // 업데이트
-          if(idx != null) {
-              document.getElementsByName('menus[' + idx.rowIndex + '].name')[0].value = iRow.dataset.name;
-              document.getElementsByName('menus[' + idx.rowIndex + '].path')[0].value = path;
+          if(findIdx >= 0) {
+              saveJson[findIdx].name = iRow.dataset.name;
+              saveJson[findIdx].path = path;
 
               return true;
           }
 
-          row = temp.insertRow();
-          row.id = 'data_' + iRow.id;
+          // 신규
+          saveJson[saveCnt++] = {
+              "rowId": "data_" + iRow.id
+            , "parentNum" : iRow.dataset.parentnum
+            , "depth" : iRow.dataset.depth
+            , "name" : iRow.dataset.name
+            , "path" : path
+            , "id" : id
+            , "colStatus" : colStatus
+          };
 
-          cell = row.insertCell(0);
-          cell.innerHTML = '<input type=\"hidden\" name=\"menus[' + row.rowIndex + '].parentNum\" value=\"' + iRow.dataset.parentnum + '\"/>';
-          cell = row.insertCell(1);
-          cell.innerHTML = '<input type=\"hidden\" name=\"menus[' + row.rowIndex + '].depth\" value=\"' + iRow.dataset.depth + '\"/>';
-          cell = row.insertCell(2);
-          cell.innerHTML = '<input type=\"hidden\" name=\"menus[' + row.rowIndex + '].name\" value=\"' + iRow.dataset.name + '\"/>';
-          cell = row.insertCell(3);
-          cell.innerHTML = '<input type=\"hidden\" name=\"menus[' + row.rowIndex + '].path\" value=\"' + path + '\"/>';
-          cell = row.insertCell(4);
-          cell.innerHTML = '<input type=\"hidden\" name=\"menus[' + row.rowIndex + '].id\" value=\"' + id + '\"/>';
-          cell = row.insertCell(5);
-          cell.innerHTML = '<input type=\"hidden\" name=\"menus[' + row.rowIndex + '].colStatus\" value=\"' + colStatus + '\"/>';
       } else if(event == "delete") {
-          if(idx != null) {
-              idx.remove();
+          if(findIdx >= 0) {
+              saveJson.splice(findIdx, 1);
+              saveCnt--;
           }
       }
   }
@@ -77,7 +76,6 @@
 
   // 메뉴 컴포넌트 설정
   function fn_compSet(depth) {
-
     // 뎁스 0 : 폼 전체 숨김
     // 뎁스 1 : 메뉴명, 저장버튼 보이기
     // 뎁스 2 : 메뉴명, 경로, 저장버튼 보이기
@@ -213,17 +211,22 @@
 
   // 메뉴 저장
   function fn_save() {
-      let menuForm = document.getElementById('menuForm');
-      let temp = document.getElementById('tempTable');
-
-      if(temp.rows[0] == null) {
-          alert('저장할 데이터가 존재하지 않습니다.');
-          return false;
-      }
-
-      if(confirm('저장하시겠습니까?')) {
-        menuForm.submit();
-      }
+  // 흠... 일단 ajax 통신은 성공적임
+  // 근데 json 데이터는 어떻게 해야하나?
+  // 아무래도 csrf는 아닌거같고 json 라이브러리 추가해야할 듯
+      $.ajax({
+          type: "GET"
+        , url : "/menu/save"
+        //, dataType: "json"
+        //, contentType : "application/json"
+        , data : "saveJson"
+        , success : function(data) {
+          alert("success");
+        }
+        , error : function(e) {
+          alert(e.responseText);
+        }
+      });
   }
 
   </script>
@@ -277,10 +280,6 @@
         </tr>
       </table>
   </div>
-  <form th:action="@{/menu/save}" method="post" id="menuForm">
-    <table id="tempTable" style="visibility:hidden;">
-    </table>
-  </form>
 </div>
 </body>
 </html>
