--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -25,8 +25,8 @@
 
             function sendData(url) {
                 $.ajax({
-                    url: url,
-                    type: "GET",
+                     url: url
+                    ,type: "GET"
                 })
                 .done(function (fragment) {
                     $('#mainDiv').html(fragment);
