--- a/src/main/resources/templates/pages/index.html
+++ b/src/main/resources/templates/pages/index.html
@@ -60,8 +60,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">설정</a></li>
                         <span sec:authorize="hasRole('ROLE_ADMIN')">
+                            <li><a class="dropdown-item" onclick="sendData('/store/');">점포 관리</a></li>
                             <li><a class="dropdown-item" onclick="sendData('/menu/all');">메뉴 관리</a></li>
                         </span>
 
@@ -97,7 +97,7 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main id="mainDiv" style="margin:5px 5px 5px 5px; height:90%; width:90%;">
+                <main id="mainDiv" style="margin:5px 5px 5px 5px; height:100%; width:100">
                     <!--
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Dashboard</h1>
