--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -297,20 +297,16 @@
       <nav style="float:right; display:inline-block;">
         <button class="button_2" onclick="fn_add();">추가</button>
         <button class="button_2" onclick="fn_del();">삭제</button>
+        <button class="button_2" id="viewBtn" onclick="fn_view(); return false;">조회</button>
+        <button class="button_2" id="saveBtn" onclick="fn_save(); return false;">저장</button>
       </nav>
     </div>
-    <div id="subDiv" class="card-body">
+    <div id="subDiv" class="card-body" style="margin:5px 5px 5px 5px;">
     </div>
   </div>
 </div>
 <div style="width:1%; float:left;">ㅤ</div>
 <div id="div_menu_detail" class="card mb-4" style="width:69%; height:100%; float:left; height:100%;">
-  <div id="btnZone2" style="margin:5px 5px 5px 5px;">
-    <nav style="float:right; display:inline-block;">
-      <button class="button_2" id="viewBtn" onclick="fn_view(); return false;">조회</button>
-      <button class="button_2" id="saveBtn" onclick="fn_save(); return false;">저장</button>
-    </nav>
-  </div>
   <div class="card-body" id="menuInput">
       <table>
         <tr>
