--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -122,9 +122,9 @@
                                             </div>
                                         </form>
                                     </div>
-                                    <div class="card-footer text-center py-3">
+                                    <!--<div class="card-footer text-center py-3">
                                         <div class="small"><a sec:authorize="isAnonymous()" th:href="@{/register}">회원가입</a></div>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
