--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+button.button_1 {
+  border: 0;
+  background: #BDBDBD;
+  color: black;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button.button_1:hover {
+  background: #A4A4A4;
+}
+
 button.button_2 {
   box-sizing: border-box;
   border: 0;
@@ -19,11 +31,34 @@ button.button_2:hover {
 
 tr.tr_hover1:hover td
 {
-	background:#aba5a5;
+	background:#F2F2F2;
 }
 
 .td_border
 {
-  border : 1px solid black;
+  border : 1px solid #e3e3e3;
   border-collapse : collapse;
+}
+
+.td_border2
+{
+  border-left : 1px solid #e3e3e3;
+  border-right : 1px solid #e3e3e3;
+  border-top : 1px solid #e3e3e3;
+  border-bottom : 3px solid #e3e3e3;
+  border-collapse : collapse;
+  text-align : center;
+}
+
+.label1
+{
+  color : #65646C;
+  font-weight : bold;
+}
+
+.input1
+{
+  border-radius : 5px;
+  background-color : #F7F7F7;
+  border : 1px solid #e3e3e3;
 }
