--- a/src/main/resources/templates/pages/menu.html
+++ b/src/main/resources/templates/pages/menu.html
@@ -310,14 +310,14 @@
   <div class="card-body" id="menuInput">
       <table>
         <tr>
-          <td><lable id="menuNameL" style="visibility:hidden;">메뉴명</lable></td>
+          <td><lable class="label1"  id="menuNameL" style="visibility:hidden;">메뉴명</lable></td>
           <td></td>
-          <td><input type="text" name="name" id="menuName" onchange="fn_update(this, 'name'); return false;" style="visibility:hidden;"></td>
+          <td><input class="input1" type="text" name="name" id="menuName" onchange="fn_update(this, 'name'); return false;" style="visibility:hidden;"></td>
         </tr>
         <tr>
-          <td><lable id="menuPathL" style="visibility:hidden;">경로</lable></td>
+          <td><lable class="label1"  id="menuPathL" style="visibility:hidden;">경로</lable></td>
           <td></td>
-          <td><input type="text" name="path" id="menuPath" onchange="fn_update(this, 'path'); return false;" style="visibility:hidden;"></td>
+          <td><input class="input1" type="text" name="path" id="menuPath" onchange="fn_update(this, 'path'); return false;" style="visibility:hidden;"></td>
         </tr>
       </table>
   </div>
